--- a/css grid/index.html
+++ b/css grid/index.html
@@ -17,7 +17,7 @@
     <div id="beforefooter1">Before Footer1</div>
     <div id="beforefooter2">Before Footer2</div>
     <div id="beforefooter3">Before Footer3</div>
-    <div id="footer">Footer</div>
+    <div id="footer">Designed By Lutfor</div>
 </div>
 </body>
 </html>
